--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6846,6 +6846,17 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed issues in the DESKTOP EDITION, FOR THE WINDOWS 11 VERSION, where JavaScript-based dialogue boxes were being suppressed (due to an UPSTREAM bug in Embedded chromium), which resulted in the Windows 11 version being un-usable (sorry!)
 
+-Revised DEMO config / resources
+
+-Minor polished interface styling
+
+-------------------------------------------------------------------
+
+
+
+-------------------------------------------------------------------
+6.01.00
+
 -Revised DEMO config / resources pages
 
 -Minor polished interface styling / UX
