--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6857,6 +6857,10 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.01.00
 
+-Added API throttling PER-SECOND capability (needed for the new jupiter aggregator API *FREE* tier limits), on top of the already-existing PER-MINUTE throttling capability (we use for alphavantage stocks)
+
+-Upgraded to the new jupiter aggregator token search / info / price API endpoints
+
 -Revised DEMO config / resources pages
 
 -Minor polished interface styling / UX
