--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6846,6 +6846,21 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed issues in the DESKTOP EDITION, FOR THE WINDOWS 11 VERSION, where JavaScript-based dialogue boxes were being suppressed (due to an UPSTREAM bug in Embedded chromium), which resulted in the Windows 11 version being un-usable (sorry!)
 
+-Revised DEMO config / resources
+
+-Minor polished interface styling
+
+-------------------------------------------------------------------
+
+
+
+-------------------------------------------------------------------
+6.01.00
+
+-Added API throttling PER-SECOND capability (needed for the new jupiter aggregator API *FREE* tier limits), on top of the already-existing PER-MINUTE throttling capability (we use for alphavantage stocks)
+
+-Upgraded to the new jupiter aggregator token search / info / price API endpoints (so Jupiter markets work again now)
+
 -Revised DEMO config / resources pages
 
 -Minor polished interface styling / UX
