--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,16 +192,13 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
-Double check that the asset search field is excluded from malware scanning (as crypto addresses can cause false positives), BUT make sure all special characters are escaped (since we print the search phrase on subsequent wizard step pages [in it's title]).
+Document new 'plug_version' setting for plugins.
 
 
-Test htaccess password protection on Windows desktop edition, to see if we need to disable it, now that we've reverted to using PHPdesktop on Windows.
+Create documentation for exposing plugin settings into it's admin interface (to add to step 14 in the plugin development documentation).
 
 
 Pass the posted asset filter tags to the ticker address mapping function, but only for the ASSET instances using it (NOT the pairings).
-
-
-Move coinbase and coingecko APIs over to the new per-second throttling system.
 
 
 Double check all new Jupiter exchange market logic.
@@ -213,7 +210,7 @@ Test out the balance tracker plugin, with only a coingecko TERMINAL Solana marke
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-Move all relevent APIs over to the new per-second throttling system.
+Move all remaining relevent APIs over to the new per-second / per-minute throttling system.
 
 
 Move system stats chart scale settings from asset charts section, back to power user section. Review other chart settings to make sure they are only relevant to the assets parent section it's in.
@@ -234,9 +231,6 @@ Have $ct['dev']['special_assets'] in developer-config.php DYNAMICALLY USED in ev
 
 
 Option to use new zip file encryption password feature to encrypt portfolio spreadsheet exports when downloading exported portfolio data (with password entered in the UI, #NOT# $ct['conf']['sec']['backup_archive_password'], AS THATS ONLY FOR ADMIN USE!).
-
-
-Create documentation for exposing plugin settings into it's admin interface (to add to step 14 in the plugin development documentation).
 
 
 Add pagination to the "my portfolio" section, like we already do for other sorted data tables.
